--- a/Ejemplo2/.project
+++ b/Ejemplo2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Ejemplo2</name>
+	<name>Ejemplo2ibai</name>
 	<comment></comment>
 	<projects>
 	</projects>
